--- a/type_B/html/Main.html
+++ b/type_B/html/Main.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="../resources/css/main.css">
     <script src="../resources/js/jqery-3.5.1.min.js"></script>
     <script src="../resources/js/swiper-bundle.min.js"></script>
+    <script src="../resources/js/plugin.js"></script>
     <script src="../resources/js/ui.js"></script>
 </head>
 <body>
     <div class="wrap">
         <header>
             <div class="header_wrap">
-                <h1><a href="#"></a></h1>
+                <h1><a href="Main.html"></a></h1>
                 <nav class="gnb" id="mGnb">
                     <ul>
                         <li>
@@ -36,14 +37,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -390,7 +391,7 @@
                         <div class="swiper-slide" data-title="현재">
                             <dl class="desc">
                                 <dt><img src="../resources/images/main_vsl_03_tit.png" alt=""></dt>
-                                <dd><img src="../resources/images/main_vsl_desc.png" alt=""></dd>
+                                <dd><img src="../resources/images/main_vsl_desc_03.png" alt=""></dd>
                             </dl>
                         </div>
 
@@ -436,69 +437,78 @@
             </section>
 
             <section class="product">
-                <div class="rect"><img src="../resources/images/main_product_rect_bg.png" alt=""></div>
+                <div class="nav move"><img src="../resources/images/main_product_nav.png" alt=""></div>
+                <div class="rect move"><img src="../resources/images/main_product_rect_bg.png" alt=""></div>
                 <div class="inner">
                     <div class="tit">
-                        <h2><img src="../resources/images/main_product_tit_h2.png" alt=""></h2>
-                        <p><img src="../resources/images/main_product_tit_p.png" alt=""></p>
+                        <h2 class="move"><img src="../resources/images/main_product_tit_h2.png" alt=""></h2>
+                        <p class="move"><img src="../resources/images/main_product_tit_p.png" alt=""></p>
                     </div>
                     <ul>
                         <li class="cont_01">
-                            <div class="fl desc">
+                            <div class="fl desc move left">
                                 <dl>
-                                    <dt><img src="../resources/images/main_product_cont_01_dt.png" alt=""></dt>
-                                    <dd><img src="../resources/images/main_product_cont_01_dd_01.png" alt=""></dd>
-                                    <dd><img src="../resources/images/main_product_cont_01_dd_02.png" alt=""></dd>
+                                    <dt class="move"><img src="../resources/images/main_product_cont_01_dt.png" alt=""></dt>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_01_dd_01.png" alt=""></dd>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_01_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
-                            <div class="fr visual"><img src="../resources/images/main_product_cont_01_vsl.png" alt=""></div>
+                            <div class="fr visual move right"><img src="../resources/images/main_product_cont_01_vsl.png" alt=""></div>
                         </li>
                         <li class="cont_02">
-                            <div class="fl visual"><img src="../resources/images/main_product_cont_02_vsl.png" alt=""></div>
-                            <div class="fr desc">
+                            <div class="fl visual move left"><img src="../resources/images/main_product_cont_02_vsl.png" alt=""></div>
+                            <div class="fr desc move right">
                                 <dl>
-                                    <dt><img src="../resources/images/main_product_cont_02_dt.png" alt=""></dt>
-                                    <dd><img src="../resources/images/main_product_cont_02_dd_01.png" alt=""></dd>
-                                    <dd><img src="../resources/images/main_product_cont_02_dd_02.png" alt=""></dd>
+                                    <dt class="move"><img src="../resources/images/main_product_cont_02_dt.png" alt=""></dt>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_02_dd_01.png" alt=""></dd>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_02_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
                         </li>
                         <li class="cont_03">
-                            <div class="fl desc">
+                            <div class="fl desc move left">
                                 <dl>
-                                    <dt><img src="../resources/images/main_product_cont_03_dt.png" alt=""></dt>
-                                    <dd><img src="../resources/images/main_product_cont_03_dd_01.png" alt=""></dd>
-                                    <dd><img src="../resources/images/main_product_cont_03_dd_02.png" alt=""></dd>
+                                    <dt class="move"><img src="../resources/images/main_product_cont_03_dt.png" alt=""></dt>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_03_dd_01.png" alt=""></dd>
+                                    <dd class="move"><img src="../resources/images/main_product_cont_03_dd_02.png" alt=""></dd>
                                 </dl>
-                                <a href="#"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
+                                <a href="#" class="move"><img src="../resources/images/main_product_view_btn.png" alt=""></a>
                             </div>
-                            <div class="fr visual"><img src="../resources/images/main_product_cont_03_vsl.png" alt=""></div>
+                            <div class="fr visual move right"><img src="../resources/images/main_product_cont_03_vsl.png" alt=""></div>
                         </li>
                     </ul>
                 </div>
             </section>
 
             <section class="equip">
-                <div class="visual">
+                <div class="head">
+                    <h2 class="move"><img src="../resources/images/equipment_tit_01.png" alt=""></h2>
+                    <p class="move"><img src="../resources/images/equipment_tit_02.png" alt=""></p>
+                </div>
+                <div class="visual move">
                     <div class="tit">
-                        <p class="eng">CLEAN</p>
+                        <h2 class="move"><img src="../resources/images/equip_left_head.png" alt=""></h2>
+                        <p class="move"><img src="../resources/images/equip_left_tit.png" alt=""></p>
                     </div>
                     <div class="tab"><img src="../resources/images/equip_left_tab.png" alt=""></div>
                 </div>
                 <div class="sl_wrap">
                     
-                    <div class="swiper-container">
+                    <div class="swiper-container move">
                         <div class="swiper-wrapper">
-                        <div class="swiper-slide" data-slideNumb="0">
+                        <div class="swiper-slide">
                             <img src="../resources/images/equipment_right_bg_01.png" alt="">
+                            <img class="tit" src="../resources/images/equipment_right_tit_01.png" alt="">
                         </div>
-                        <div class="swiper-slide" data-slideNumb="1">
+                        <div class="swiper-slide">
                             <img src="../resources/images/equipment_right_bg_02.png" alt="">
+                            <img class="tit" src="../resources/images/equipment_right_tit_02.png" alt="">
                         </div>
-                        <div class="swiper-slide" data-slideNumb="2">
+                        <div class="swiper-slide">
                             <img src="../resources/images/equipment_right_bg_03.png" alt="">
+                            <img class="tit" src="../resources/images/equipment_right_tit_03.png" alt="">
                         </div>
                         </div>
                     </div>
@@ -538,39 +548,40 @@
 
             <section class="company">
                 <div class="desc">
-                    <h2><img src="../resources/images/Company_h2.png" alt=""></h2>
+                    <h2 class="move"><img src="../resources/images/Company_h2.png" alt=""></h2>
                     <dl>
-                        <dt><img src="../resources/images/company_desc_dt.png" alt=""></dt>
-                        <dd><img src="../resources/images/company_desc_dd.png" alt=""></dd>
+                        <dt class="move"><img src="../resources/images/company_desc_dt.png" alt=""></dt>
+                        <dd class="move"><img src="../resources/images/company_desc_dd.png" alt=""></dd>
                     </dl>
-                    <a href="#"><img src="../resources/images/company_desc_btn.png" alt=""></a>
+                    <a href="#" class="move"><img src="../resources/images/company_desc_btn.png" alt=""></a>
                 </div>
                 <div class="visual">
-                    <img src="../resources/images/company_hand.png" alt="">
+                    <img class="move" src="../resources/images/company_hand.png" alt="">
                 </div>
             </section>
 
-            <section class="busi">
-                <h2><img src="../resources/images/busi_h2.png" alt=""></h2>
+            <section class="busi scrollCtr">
+                <div class="bcg1"></div>
+                <h2 class="move"><img src="../resources/images/busi_h2.png" alt=""></h2>
                 <dl>
-                    <dt><img src="../resources/images/busi_dt.png" alt=""></dt>
-                    <dd><img src="../resources/images/busi_dd.png" alt=""></dd>
+                    <dt class="move"><img src="../resources/images/busi_dt.png" alt=""></dt>
+                    <dd class="move"><img src="../resources/images/busi_dd.png" alt=""></dd>
                 </dl>
                 <ul>
-                    <li><img src="../resources/images/busi_cont_01.png" alt=""></li>
-                    <li><img src="../resources/images/busi_cont_02.png" alt=""></li>
-                    <li><img src="../resources/images/busi_cont_03.png" alt=""></li>
-                    <li><img src="../resources/images/busi_cont_04.png" alt=""></li>
+                    <li class="move"><img src="../resources/images/busi_cont_01.png" alt=""></li>
+                    <li class="move"><img src="../resources/images/busi_cont_02.png" alt=""></li>
+                    <li class="move"><img src="../resources/images/busi_cont_03.png" alt=""></li>
+                    <li class="move"><img src="../resources/images/busi_cont_04.png" alt=""></li>
                 </ul>
-                <a href="#"><img src="../resources/images/busi_btn.png" alt=""></a>
+                <a href="#" class="move"><img src="../resources/images/busi_btn.png" alt=""></a>
             </section>
 
             <section class="media">
                 <div class="tit">
-                    <h2><img src="../resources/images/media_h2.png" alt=""></h2>
-                    <p><img src="../resources/images/media_p.png" alt=""></p>
+                    <h2 class="move"><img src="../resources/images/media_h2.png" alt=""></h2>
+                    <p class="move"><img src="../resources/images/media_p.png" alt=""></p>
                 </div>
-                <div class="sl_wrap">
+                <div class="sl_wrap move">
                     <div class="swiper-container">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -628,38 +639,73 @@
 
             <section class="museum">
                 <div class="desc">
-                    <h2><img src="../resources/images/museum_dt.png" alt=""></h2>
-                    <p><img src="../resources/images/museum_dd.png" alt=""></p>
-                    <div class="btn"><a href="#"><img src="../resources/images/museum_btn.png" alt=""></a></div>
+                    <h2 class="move"><img src="../resources/images/museum_dt.png" alt=""></h2>
+                    <p class="move"><img src="../resources/images/museum_dd.png" alt=""></p>
+                    <div class="btn move"><a href="#"><img src="../resources/images/museum_btn.png" alt=""></a></div>
                 </div>
             </section>
 
-            <section class="other">
+            <section class="other scrollCtr">
                 <ul>
-                    <li class="fl">
-                        <div class="bcg"><img src="../resources/images/other_cont_01.png" alt=""></div>
+                    <li class="fl move left">
+                        <div class="bcg"><img class="bcg1" src="../resources/images/other_cont_01.png" alt=""></div>
                         <div class="desc">
                             <dl>
-                                <dt><img src="../resources/images/other_cont_01_dt.png" alt=""></dt>
-                                <dd><img src="../resources/images/other_cont_01_dd_01.png" alt=""></dd>
-                                <dd><img src="../resources/images/other_cont_01_dd_02.png" alt=""></dd>
+                                <dt class="move"><img src="../resources/images/other_cont_01_dt.png" alt=""></dt>
+                                <dd class="move"><img src="../resources/images/other_cont_01_dd_01.png" alt=""></dd>
+                                <dd class="move"><img src="../resources/images/other_cont_01_dd_02.png" alt=""></dd>
                             </dl>
                         </div>
                     </li>
-                    <li class="fr">
-                        <div class="bcg"><img src="../resources/images/other_cont_02.png" alt=""></div>
+                    <li class="fr move right">
+                        <div class="bcg"><img class="bcg1" src="../resources/images/other_cont_02.png" alt=""></div>
                         <div class="desc">
                             <dl>
-                                <dt><img src="../resources/images/other_cont_01_dt.png" alt=""></dt>
-                                <dd><img src="../resources/images/other_cont_02_dd_01.png" alt=""></dd>
-                                <dd><img src="../resources/images/other_cont_02_dd_02.png" alt=""></dd>
+                                <dt class="move"><img src="../resources/images/other_cont_01_dt.png" alt=""></dt>
+                                <dd class="move"><img src="../resources/images/other_cont_02_dd_01.png" alt=""></dd>
+                                <dd class="move"><img src="../resources/images/other_cont_02_dd_02.png" alt=""></dd>
                             </dl>
                         </div>
                     </li>
                 </ul>
             </section>
         </main>
-        <footer><img src="../resources/images/footer.png" alt=""></footer>
+        <footer>
+            <img src="../resources/images/footer.png" alt="">
+            <div class="top_btn move"><img src="../resources/images/top_btn.png" alt=""></div>
+        </footer>
     </div>
 </body>
+<script>
+    $(window).scroll(function(){
+        var st = $(window).scrollTop();
+        var bh = $(window).height();
+
+        $('.move.left').each(function(){
+                var $this = $(this);
+                var my_st = $this.offset().top - (bh * 1);
+
+                if(st > my_st){
+                        $this.addClass('active');
+                }
+        });
+
+        $('.move.right').each(function(){
+                var $this = $(this);
+                var my_st = $this.offset().top - (bh * 1);
+
+                if(st > my_st){
+                        $this.addClass('active');
+                }
+        });
+        $('.move').each(function(){
+                var $this = $(this);
+                var my_st = $this.offset().top - (bh * 1);
+
+                if(st > my_st){
+                        $this.addClass('active');
+                }
+        });
+    });
+</script>
 </html>
