--- a/type_B/html/Story.html
+++ b/type_B/html/Story.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="../resources/css/story.css">
     <script src="../resources/js/jqery-3.5.1.min.js"></script>
     <script src="../resources/js/swiper-bundle.min.js"></script>
-    <!-- <script src="../resources/js/ui.js"></script> -->
+    <script src="../resources/js/plugin.js"></script>
+    <script src="../resources/js/ui.js"></script>
 </head>
 <body>
     <div class="wrap">
         <header>
             <div class="header_wrap">
-                <h1><a href="#"></a></h1>
+                <h1><a href="Main.html"></a></h1>
                 <nav class="gnb" id="mGnb">
                     <ul>
                         <li>
@@ -36,14 +37,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -94,14 +95,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -152,14 +153,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -210,14 +211,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -268,14 +269,14 @@
                                     </li>
                                     <li>
                                         <ol>
-                                            <li>반도체 장비</li>
+                                            <li><a href="Product.html">반도체 장비</a></li>
                                             <li>디스플레이 장비</li>
                                         </ol>
                                     </li>
                                     <li>
                                         <ol>
                                             <li>뉴스룸</li>
-                                            <li>세메스를 말하다</li>
+                                            <li><a href="Story.html">세메스를 말하다</a></li>
                                             <li>온라인 홍보관</li>
                                         </ol>
                                     </li>
@@ -436,61 +437,62 @@
             </section>
 
             <section class="sect_02">
-                <div class="tab"><img src="../resources/images/story/sect_02_tab.png" alt=""></div>
+                <div class="tab move"><img src="../resources/images/story/sect_02_tab.png" alt=""></div>
                 <ul>
                     <li class="cont_01 fl">
                         <div class="desc">
                             <dl>
-                                <dt><img src="../resources/images/story/sect_02_cont_01_tit_01.png" alt=""></dt>
-                                <dd><img src="../resources/images/story/sect_02_cont_01_tit_02.png" alt=""></dd>
-                                <dd><img src="../resources/images/story/sect_02_cont_01_tit_03.png" alt=""></dd>
+                                <dt class="move left"><img src="../resources/images/story/sect_02_cont_01_tit_01.png" alt=""></dt>
+                                <dd class="move left"><img src="../resources/images/story/sect_02_cont_01_tit_02.png" alt=""></dd>
+                                <dd class="move left"><img src="../resources/images/story/sect_02_cont_01_tit_03.png" alt=""></dd>
                             </dl>
                         </div>
-                        <div class="vsl"><img src="../resources/images/story/sect_02_cont_01_vsl.png" alt=""></div>
+                        <div class="vsl move left"><img src="../resources/images/story/sect_02_cont_01_vsl.png" alt=""></div>
                     </li>
                     <li class="cont_02 fr">
-                        <div class="vsl"><img src="../resources/images/story/sect_02_cont_02_vsl.png" alt=""></div>
+                        <div class="vsl move right"><img src="../resources/images/story/sect_02_cont_02_vsl.png" alt=""></div>
                         <div class="desc">
                             <dl>
-                                <dt><img src="../resources/images/story/sect_02_cont_02_tit_01.png" alt=""></dt>
-                                <dd><img src="../resources/images/story/sect_02_cont_02_tit_02.png" alt=""></dd>
-                                <dd><img src="../resources/images/story/sect_02_cont_02_tit_03.png" alt=""></dd>
+                                <dt class="move right"><img src="../resources/images/story/sect_02_cont_02_tit_01.png" alt=""></dt>
+                                <dd class="move right"><img src="../resources/images/story/sect_02_cont_02_tit_02.png" alt=""></dd>
+                                <dd class="move right"><img src="../resources/images/story/sect_02_cont_02_tit_03.png" alt=""></dd>
                             </dl>
                         </div>
                     </li>
                 </ul>
             </section>
             
-            <section class="sect_03">
+            <section class="sect_03 scrollCtr">
+                <div class="bcg1"></div>
                 <div class="desc">
-                    <p><img src="../resources/images/story/sect_03_tit_01.png" alt=""></p>
-                    <p><img src="../resources/images/story/sect_03_tit_02.png" alt=""></p>
-                    <p><img src="../resources/images/story/sect_03_tit_03.png" alt=""></p>
-                    <p><img src="../resources/images/story/sect_03_tit_04.png" alt=""></p>
-                    <p><img src="../resources/images/story/sect_03_tit_05.png" alt=""></p>
+                    <p class="move left"><img src="../resources/images/story/sect_03_tit_01.png" alt=""></p>
+                    <p class="move left"><img src="../resources/images/story/sect_03_tit_02.png" alt=""></p>
+                    <p class="move left"><img src="../resources/images/story/sect_03_tit_03.png" alt=""></p>
+                    <p class="move left"><img src="../resources/images/story/sect_03_tit_04.png" alt=""></p>
+                    <p class="move left"><img src="../resources/images/story/sect_03_tit_05.png" alt=""></p>
                 </div>
-                <div class="more_btn"><img src="../resources/images/story/sect_03_more.png" alt=""></div>
+                <div class="more_btn move right"><img src="../resources/images/story/sect_03_more.png" alt=""></div>
             </section>
 
             <section class="sect_04">
                 <div class="inner">
                     <h2 class="tit"><img src="../resources/images/story/sect_04_tit.png" alt=""></h2>
                     <ul>
-                        <li class="cont_01 fl">
-                            <div class="vsl"><img src="../resources/images/story/sect_04_cont_01_vsl.png" alt=""></div>
+                        <li class="cont_01 fl move left">
+                            <div class="vsl scrollCtr"><img class="bcg1" src="../resources/images/story/sect_04_cont_01_vsl.png" alt=""></div>
                             <div class="desc">
                                 <dl>
-                                    <dt><img src="../resources/images/story/sect_04_cont_01_desc_01.png" alt=""></dt>
-                                    <dd><img src="../resources/images/story/sect_04_cont_01_desc_02.png" alt=""></dd>
+                                    <dt class="move"><img src="../resources/images/story/sect_04_cont_01_desc_01.png" alt=""></dt>
+                                    <dd class="move"><img src="../resources/images/story/sect_04_cont_01_desc_02.png" alt=""></dd>
                                 </dl>
                             </div>
                         </li>
                         <li class="cont_02 fr">
-                            <div class="vsl"><img src="../resources/images/story/sect_04_cont_02_vsl.png" alt=""></div>
+                            <div class="vsl scrollCtr move right"><img class="bcg1" src="../resources/images/story/sect_04_cont_02_vsl.png" alt=""></div>
                             <div class="desc">
                                 <dl>
-                                    <dt><img src="../resources/images/story/sect_04_cont_02_desc_01.png" alt=""></dt>
-                                    <dd><img src="../resources/images/story/sect_04_cont_02_desc_02.png" alt=""></dd>
+                                    <dt class="move"><img src="../resources/images/story/sect_04_cont_02_desc_01.png" alt=""></dt>
+                                    <dd class="move"><img src="../resources/images/story/sect_04_cont_02_desc_02.png" alt=""></dd>
                                 </dl>
                             </div>
                         </li>
@@ -499,29 +501,29 @@
             </section>
 
             <section class="sect_05">
-                <h2 class="tit"><img src="../resources/images/story/sect_05_tit.png" alt=""></h2>
+                <h2 class="tit move"><img src="../resources/images/story/sect_05_tit.png" alt=""></h2>
                 <ul>
                     <li class="cont_01">
-                        <div class="vsl">
-                            <img class="bg" src="../resources/images/story/sect_05_cont_01_vsl.png" alt="">
-                            <img class="play_btn" src="../resources/images/story/sect_05_play_btn.png" alt="">
+                        <div class="vsl scrollCtr">
+                            <img class="bg bcg1 move" src="../resources/images/story/sect_05_cont_01_vsl.png" alt="">
+                            <img class="play_btn move" src="../resources/images/story/sect_05_play_btn.png" alt="">
                         </div>
                         <div class="desc">
                             <dl>
-                                <dt class="fl"><img src="../resources/images/story/sect_05_cont_01_desc_01.png" alt=""></dt>
+                                <dt class="fl move left"><img src="../resources/images/story/sect_05_cont_01_desc_01.png" alt=""></dt>
                                 <dd class="fl">
-                                    <img class="n01" src="../resources/images/story/sect_05_cont_01_desc_02.png" alt="">
-                                    <img class="n02" src="../resources/images/story/sect_05_cont_01_desc_03.png" alt="">
+                                    <img class="n01 move right" src="../resources/images/story/sect_05_cont_01_desc_02.png" alt="">
+                                    <img class="n02 move right" src="../resources/images/story/sect_05_cont_01_desc_03.png" alt="">
                                 </dd>
                             </dl>
                         </div>
                     </li>
                     <li class="cont_02">
-                        <div class="vsl fl"><img class="bg" src="../resources/images/story/sect_05_cont_02_vsl.png" alt=""></div>
+                        <div class="vsl fl scrollCtr move left"><img class="bg bcg1" src="../resources/images/story/sect_05_cont_02_vsl.png" alt=""></div>
                         <div class="desc fl">
                             <dl>
-                                <dt><img src="../resources/images/story/sect_05_cont_02_desc_01.png" alt=""></dt>
-                                <dd><img src="../resources/images/story/sect_05_cont_02_desc_02.png" alt=""></dd>
+                                <dt class="move right"><img src="../resources/images/story/sect_05_cont_02_desc_01.png" alt=""></dt>
+                                <dd class="move right"><img src="../resources/images/story/sect_05_cont_02_desc_02.png" alt=""></dd>
                             </dl>
                         </div>
                     </li>
@@ -529,7 +531,10 @@
             </section>
         </main>
 
-        <footer><img src="../resources/images/footer.png" alt=""></footer>
+        <footer>
+            <img src="../resources/images/footer.png" alt="">
+            <div class="top_btn move"><img src="../resources/images/top_btn.png" alt=""></div>
+        </footer>
     </div>
 </body>
 </html>
